force-app/main/default/objects/Subscription_Team_Member__c/fields/Est_Remediation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Est_Remediation_Cost__c</fullName>
    <label>Est. Remediation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>