force-app/main/default/objects/Subscription_Team_Member__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscription_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>