force-app/main/default/objects/Subscription_Team_Member__c/fields/Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Member_Role__c</fullName>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>At Risk Lead</fullName>
            </value>
            <value>
                <fullName>At Risk Member</fullName>
            </value>
            <value>
                <fullName>At Risk Internal Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>